# rulst_test

./: .gitignore  Cargo.toml
async_await/: Cargo.toml
async_await-echo/: Cargo.toml
async_await-echo/src/: main.rs
async_await/src/: async_await_primer.rs  executing_multiple_futures.rs  main.rs
briliang_exercise/: .gitignore  Cargo.toml
briliang_exercise/src/: lib.rs  main.rs
briliang_exercise/src/advance/: mod.rs
briliang_exercise/src/advance_function_closure/: mod.rs
briliang_exercise/src/advance_type/: mod.rs
briliang_exercise/src/collections/: mod.rs
briliang_exercise/src/concurrency/: mod.rs
briliang_exercise/src/control_flow/: mod.rs
briliang_exercise/src/data_type/number/: mod.rs
briliang_exercise/src/enums/: mod.rs
briliang_exercise/src/functional_feature/: mod.rs
briliang_exercise/src/macros/: mod.rs
briliang_exercise/src/module/: mod.rs  raw_identifier.rs  shadowing.rs
briliang_exercise/src/module/sound/: instrument.rs
briliang_exercise/src/oop/: mod.rs
briliang_exercise/src/ownership/: mod.rs
briliang_exercise/src/pattern_matching/: mod.rs
briliang_exercise/src/smart_pointer/: mod.rs
briliang_exercise/tests/: integration_test.rs  test_hello_cargo_crate.rs
briliang_exercise/tests/error_handle/: mod.rs
briliang_exercise/tests/function/: mod.rs
briliang_exercise/tests/functional_feature/: mod.rs
briliang_exercise/tests/generic_trait_lifetime/: mod.rs
briliang_exercise/tests/module/: mod.rs
briliang_exercise/tests/smart_pointer/: mod.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: .gitignore  Cargo.toml  README.MD
hello_cargo/src/: data_type.rs  lib.rs  main.rs
hello_cargo/src/control_flow/: mod.rs
hello_cargo/src/data_type/: number.rs
hello_cargo/src/data_type/float/: mo.rs  mod.rs
hello_cargo/src/data_type/int/: mod.rs
hello_cargo/src/data_type/tuple_and_array/: mod.rs
hello_cargo/src/ownership/: mod.rs
hello_cargo/src/structure/: mod.rs
hello_cargo/tests/: integration_test.rs  test_hello_cargo_crate.rs
hello_cargo/tests/collections/: mod.rs
hello_cargo/tests/control_flow/: mod.rs
hello_cargo/tests/data_type/: mod.rs
hello_cargo/tests/error_handle/: mod.rs
hello_cargo/tests/generic_trait_lifetime/: mod.rs
hello_cargo/tests/module/: raw_identifier.rs  shadowing.rs
hello_cargo/tests/module/sound/: instrument.rs
hello_marco_derive/: Cargo.toml
hello_marco_derive/src/: lib.rs
mouse_app/: Cargo.toml
mouse_app/src/: main.rs
mouse_common/: Cargo.toml
mouse_common/src/: lib.rs  mouse_operate.rs
mouse_position/: Cargo.toml
mouse_position/src/: main.rs
mouse_script/: Cargo.toml
mouse_script/src/: main.rs  mouse_operate.rs
test_data/: Cargo.toml
test_data/src/: lib.rs
test_data/tests/: integration_test.rs
test_data/tests/common/: mod.rs
web-server/: Cargo.toml
web-server/src/: main.rs
web_server/: Cargo.toml
web_server/config/: log4rs.yaml
web_server/src/: lib.rs  server.rs
web_server/static/: web_socket.html
