[package]
name = "briliang_exercise"
version = "0.1.0"
authors = ["梁文亮 <kobetys@163.com>"]
edition = "2018"
description = "A Open Learing Exercise"
license = "MIT"
repository = "https://github.com/kokokobe/rust_test"

[dependencies]
rand = "0.6.5"

[profile.release]
panic = 'abort'
opt-level = 3

[profile.dev]
opt-level = 0