[package]
name = "briliang_exercise"
version = "0.1.0"
authors = ["梁文亮 <kobetys@163.com>"]
edition = "2018"
description = "A Open Learing Exercise"
license = "MIT"
repository = "https://github.com/kokokobe/rust_test"

[dependencies]
rand = "0.7.0"
## log rs
log = "0.4.8"
log4rs = {version = "0.9.0"}
hello_marco_derive = {path="../hello_marco_derive"}