[package]
name = "web_server"
version = "0.1.0"
authors = ["briliang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
## log rs
log = "^0.4.11"
log4rs = { version = "^1.0.0" }

[dev-dependencies]