[package]
name = "web_server"
version = "0.1.0"
authors = ["briliang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3"
actix-codec = "0.3"
actix-web-actors = "3"
actix = "0.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"

## log rs
log = "^0.4.11"
log4rs = { version = "^1.0.0" }

tokio = "0.2.4"
tokio-util = "0.3"
futures = "0.3"

rand = "0.7"
bytes = "0.5.3"
byteorder = "1.2"

[dev-dependencies]
